[project]
name = "notion-webhook-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.51.0",
    "fastapi[standard]>=0.115.12",
    "google-api-python-client>=2.169.0",
    "google-auth>=2.40.1",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "md2notionpage>=0.1.5",
    "notion-client>=2.3.0",
    "pydantic>=2.11.4",
]
